# aks-platform

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: conventional-commits.yml  cost-monitoring.yml  python-ci.yml  terraform-deploy.yml  terraform-drift-detection.yml  terraform-plan.yml
docs/: ai-ml-workloads-guide.md  aks-cluster-upgrade-guide.md  application-gateway-for-containers.md  architecture.md  azure-github-oidc-setup.md  azure-workload-identity.md  bootstrap-checklist.md  certificate-management-guide.md  cicd-guide.md  cleanup-guide.md  cluster-access-guide.md  cost-monitoring-guide.md  deployment-guide.md  environment-configuration-guide.md  existing-infrastructure-guide.md  greenfield-deployment-validation.md  greenfield-setup-guide.md  helm-management-guide.md  letsencrypt-integration.md  no-domain-setup.md  pipeline-deployment-guide.md  platform-design-philosophy.md  production-update-strategy.md  quick-start.md  security.md  troubleshooting.md
scripts/: README.md  aks-upgrade-execute.sh  aks-upgrade-monitor.sh  aks-upgrade-preflight.sh  aks-upgrade-validate.sh  azure-cost-monitor.py  azure_utils.py  check-python-env.py  cleanup-infrastructure.sh  cost-dashboard.sh  cost-monitor.sh  fix-kubectl-provider.sh  manage-dependencies.py  manage-workflows.sh  module-check.py  requirements-dev.txt  requirements-test.txt  requirements.txt  safe-deployment.sh  setup-azure-credentials  setup-azure-credentials.py  setup-azure-credentials.sh  setup-azure-oidc.sh  setup-environment-credentials.py  setup-github-secrets.sh  setup-python-env.sh  show-infrastructure.py  show-infrastructure.sh  validate-bootstrap.sh  venv-utils.sh
terraform/: main.tf  outputs.tf  terraform.tf  variables.tf  workload_identity.tf
terraform/environments/dev/: backend.conf  backend.conf.example  terraform.tfvars.example
terraform/environments/prod/: backend.conf  terraform.tfvars.example
terraform/environments/staging/: backend.conf  terraform.tfvars.example
terraform/modules/agc/: main.tf  outputs.tf  variables.tf
terraform/modules/ai_tools/: main.tf  outputs.tf  variables.tf
terraform/modules/aks/: main.tf  outputs.tf  variables.tf
terraform/modules/application_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/cert_manager/: main.tf  outputs.tf  variables.tf
terraform/modules/container_registry/: main.tf  outputs.tf  variables.tf
terraform/modules/gitops/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
