# Setup configuration for Azure AKS GitOps Platform
# This file contains configuration for various Python development tools

[metadata]
name = aks-platform
version = 1.0.0
description = Azure AKS GitOps Platform with Infrastructure as Code
long_description = file: README.md
long_description_content_type = text/markdown
author = Azure AKS GitOps Platform Team
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
include_package_data = True
zip_safe = False

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
exclude = 
    .git,
    __pycache__,
    venv,
    .venv,
    env,
    .env,
    build,
    dist,
    *.egg-info,
    .terraform

# MyPy configuration
[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
exclude = venv|.venv|env|.env|build|dist

# Coverage configuration
[coverage:run]
source = scripts
omit = 
    */venv/*
    */.venv/*
    */env/*
    */.env/*
    */tests/*
    */test_*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

# Pytest configuration
[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --cov=scripts
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-report=xml
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    azure: marks tests that require Azure credentials

# isort configuration
[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = scripts
known_third_party = azure,requests,click,yaml
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
include_trailing_comma = True

# Black configuration (in pyproject.toml format for reference)
# [tool.black]
# line-length = 88
# target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.eggs
#   | \.git
#   | \.hg
#   | \.mypy_cache
#   | \.tox
#   | \.venv
#   | _build
#   | buck-out
#   | build
#   | dist
# )/
# '''
